# task02--zoo-rurosenb

./: CMakeLists.txt  README.md
include/: Animal.h  CMakeLists.txt  Goose.h  Lion.h  Location.h  Monkey.h  zoo.h
src/: Animal.cpp  CMakeLists.txt  CMakeProject2.cpp  Goose.cpp  Lion.cpp  Location.cpp  Main.cpp  Monkey.cpp  zoo.cpp
